Explain how to make WildFly open a debugging port.